# system_programming

./: CMakeLists.txt  task1_program
pack1/libauth/libauth/: auth  auth.c  auth.h
pack1/libdata/libdata/: data.h  users.db
pack1/libparse/libparse/: parse.c  parse.h
pack1/task1/: main.c
